[metadata]
name = xcube-cmems
version = 0.1.1
author = xcube Development Team
author_email = xcube-team@brockmann-consult.de
description = An xcube plugin that allows generating data cubes from the CMEMS API
license = MIT
url = https://github.com/dcs4cop/xcube-cmems

[options]
packages = xcube-cmems
install_requires =
    xcube>=0.12.1
    pydap>=3.3.0
    lxml>=4.9.1
    owslib
    pyproj
    zarr

[options.packages.find]
exclude = tests, test.*

[options.extras_require]
dev =
    pytest>=6.2.4
    mock

[bdist_wheel]
universal = 1